syntax="proto3";
package pb;
option go_package =".;pb";

message User {
    string id=1;
    string name=2;
    string email=3;
}

message Users {
    repeated User user=1;
}

message UserResultStream {
    string status=1;
    User user=2;
}

service UserService {
    rpc Add (User) returns (User);
    rpc AddStream (stream User) returns (Users);
    rpc AddVerbose (User) returns (stream UserResultStream);
    rpc AddBidiStream (stream User) returns (stream UserResultStream);
}